--- a/Custom_DLL/Custom_DLL.vcxproj.filters
+++ b/Custom_DLL/Custom_DLL.vcxproj.filters
@@ -21,12 +21,18 @@
     <ClInclude Include="pch.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="Custom.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="pch.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Custom.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
